--- a/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
+++ b/assignments/assignment3/DATA_301_Assignment_3_Ishaan_Sathaye_and_Sreshta_Talluri.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 34,
       "metadata": {
         "id": "vOIKn1LViity"
       },
@@ -181,33 +181,24 @@
               "4    80,416  87,980  25,249       7,927         148   283,680  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# ENTER YOUR CODE HERE. ADD AS MANY CELLS AS YOU WANT.\n",
-        "# Using this data, evaluate the claim that many voters in Palm Beach County voted for Buchanan when they intended to vote for Gore.\n",
-        "# You should check whether Palm Beach County fits the general pattern of the other counties in Florida, but you need to decide how to measure/visualize the \"general pattern\". Visualizations will likely be more helpful than summary statistics.\n",
-        "# Then, craft a story that guides the reader through your discoveries. Your story should contain both figures and explanations.\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
         "df_2000 = pd.read_csv('https://dlsun.github.io/pods/data/florida.csv')\n",
-        "\n",
-        "# data has:\n",
-        "# - the number of votes for Gore, Bush, Buchanan, and a few other candidates in the 2000 presidential election\n",
-        "# - the number of votes for Clinton (Democrat), Dole (Republican), and Perot (Reform) in the 1996 presidential election\n",
-        "# - the number of votes for Buchanan in the 1996 primary\n",
-        "# - the number of registered Reform voters and the total number of registered voters\n",
         "\n",
         "df_2000.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -347,7 +338,7 @@
               "4     80416  87980   25249        7927         148    283680  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -364,7 +355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -531,22 +522,22 @@
               "</div>"
             ],
             "text/plain": [
-              "     county buchanan2000 gore2000 bush2000 nader2000 browne2000 total2000  \\\n",
-              "0   ALACHUA          262    47300    34062      3215        658     85235   \n",
+              "     county buchanan2000 gore2000 bush2000 nader2000 browne2000 total2000   \n",
+              "0   ALACHUA          262    47300    34062      3215        658     85235  \\\n",
               "1     BAKER           73     2392     5610        53         17      8072   \n",
               "2       BAY          248    18850    38637       828        171     58486   \n",
               "3  BRADFORD           65     3072     5413        84         28      8597   \n",
               "4   BREVARD          570    97318   115185      4470        643    217616   \n",
               "\n",
-              "  clinton96 dole96 perot96 buchanan96p  reform.reg total.reg  \\\n",
-              "0     40144  25303    8072        2151          91    120867   \n",
+              "  clinton96 dole96 perot96 buchanan96p  reform.reg total.reg   \n",
+              "0     40144  25303    8072        2151          91    120867  \\\n",
               "1      2273   3684     667          73           4     12352   \n",
               "2     17020  28290    5922        1816          55     92749   \n",
               "3      3356   4038     819         155           3     13547   \n",
               "4     80416  87980   25249        7927         148    283680   \n",
               "\n",
-              "  buchanan2000_prop gore2000_prop bush2000_prop buchanan1996_prop  \\\n",
-              "0          0.003074      0.554936      0.399625          0.017796   \n",
+              "  buchanan2000_prop gore2000_prop bush2000_prop buchanan1996_prop   \n",
+              "0          0.003074      0.554936      0.399625          0.017796  \\\n",
               "1          0.009044      0.296333      0.694995           0.00591   \n",
               "2           0.00424      0.322299       0.66062           0.01958   \n",
               "3          0.007561      0.357334      0.629638          0.011442   \n",
@@ -560,7 +551,7 @@
               "4       -0.025324            -0.865835         0.005857  "
             ]
           },
-          "execution_count": 26,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -579,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -622,6 +613,7 @@
               "      <th>buchanan1996_prop</th>\n",
               "      <th>buchanan change</th>\n",
               "      <th>buchanan2000_96_prop</th>\n",
+              "      <th>buchanan_vs_gore</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -646,6 +638,7 @@
               "      <td>0.013382</td>\n",
               "      <td>-0.005424</td>\n",
               "      <td>-0.441246</td>\n",
+              "      <td>0.012668</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -661,11 +654,11 @@
               "   buchanan2000_prop gore2000_prop bush2000_prop buchanan1996_prop   \n",
               "49          0.007958      0.628232      0.357035          0.013382  \\\n",
               "\n",
-              "   buchanan change buchanan2000_96_prop  \n",
-              "49       -0.005424            -0.441246  "
+              "   buchanan change buchanan2000_96_prop buchanan_vs_gore  \n",
+              "49       -0.005424            -0.441246         0.012668  "
             ]
           },
-          "execution_count": 4,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -679,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -688,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -1947,7 +1940,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -3053,7 +3046,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -4354,7 +4347,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 42,
       "metadata": {
         "id": "Bv_LSqYajFAA"
       },
@@ -4554,7 +4547,7 @@
               "[5 rows x 35 columns]"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -4569,7 +4562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -5164,7 +5157,7 @@
               "33                                                NaN  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5176,7 +5169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -5594,7 +5587,7 @@
               "33                                                NaN  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5606,7 +5599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -5655,7 +5648,7 @@
               "1  Retrieval  0.576471"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5667,7 +5660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -5676,7 +5669,7 @@
               "<Axes: title={'center': 'Proportion of Prediction by Condition'}, xlabel='Condition', ylabel='Proportion of Prediction'>"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -5729,7 +5722,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 47,
       "metadata": {
         "id": "zoCX4a3KkgBC"
       },
@@ -5780,7 +5773,7 @@
               "1  Retrieval  0.616471"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5793,7 +5786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -5802,7 +5795,7 @@
               "<Axes: title={'center': 'Proportion of Average Test Score by Condition'}, xlabel='Condition', ylabel='Proportion of Avg Test Scores'>"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -5850,7 +5843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 49,
       "metadata": {
         "id": "KjpGo6dYjFYG"
       },
@@ -5901,7 +5894,7 @@
               "1  Retrieval          0.191765"
             ]
           },
-          "execution_count": 57,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -5916,7 +5909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
@@ -5924,23 +5917,23 @@
             "text/html": [
               "\n",
               "<style>\n",
-              "  #altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c.vega-embed {\n",
+              "  #altair-viz-2e714b4ffbe848bfa2a1708cbc2de794.vega-embed {\n",
               "    width: 100%;\n",
               "    display: flex;\n",
               "  }\n",
               "\n",
-              "  #altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c.vega-embed details,\n",
-              "  #altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c.vega-embed details summary {\n",
+              "  #altair-viz-2e714b4ffbe848bfa2a1708cbc2de794.vega-embed details,\n",
+              "  #altair-viz-2e714b4ffbe848bfa2a1708cbc2de794.vega-embed details summary {\n",
               "    position: relative;\n",
               "  }\n",
               "</style>\n",
-              "<div id=\"altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c\"></div>\n",
+              "<div id=\"altair-viz-2e714b4ffbe848bfa2a1708cbc2de794\"></div>\n",
               "<script type=\"text/javascript\">\n",
               "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
               "  (function(spec, embedOpt){\n",
               "    let outputDiv = document.currentScript.previousElementSibling;\n",
-              "    if (outputDiv.id !== \"altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c\") {\n",
-              "      outputDiv = document.getElementById(\"altair-viz-ff27a4a3b2244d0c85ba9b9739cd790c\");\n",
+              "    if (outputDiv.id !== \"altair-viz-2e714b4ffbe848bfa2a1708cbc2de794\") {\n",
+              "      outputDiv = document.getElementById(\"altair-viz-2e714b4ffbe848bfa2a1708cbc2de794\");\n",
               "    }\n",
               "    const paths = {\n",
               "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -5993,7 +5986,7 @@
               "alt.Chart(...)"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -6069,7 +6062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 51,
       "metadata": {
         "id": "RNnAgYubmsZg"
       },
@@ -9404,7 +9397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 52,
       "metadata": {
         "id": "at_5TpybqI3n"
       },
@@ -9766,7 +9759,7 @@
               "[2930 rows x 83 columns]"
             ]
           },
-          "execution_count": 18,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -9781,7 +9774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -9809,7 +9802,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -9821,7 +9814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -10012,7 +10005,7 @@
               "[2930 rows x 8 columns]"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10025,7 +10018,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
@@ -10042,7 +10035,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10054,7 +10047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -10071,7 +10064,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10085,7 +10078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -10460,7 +10453,7 @@
               "[2930 rows x 19 columns]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10472,7 +10465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -10493,7 +10486,7 @@
               "        -0.17074395, -0.21373267]])"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10510,7 +10503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -10525,7 +10518,7 @@
               "       [4.90935057]])"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10539,7 +10532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -10872,7 +10865,7 @@
               "[10 rows x 84 columns]"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -10894,7 +10887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 61,
       "metadata": {
         "id": "zmfmuntEqq05"
       },
@@ -11012,7 +11005,7 @@
               "2700        394.0        1.0     131000  "
             ]
           },
-          "execution_count": 27,
+          "execution_count": 61,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11024,7 +11017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -11084,7 +11077,7 @@
               "0        528.0        1.0     215000  "
             ]
           },
-          "execution_count": 28,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11129,7 +11122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 63,
       "metadata": {
         "id": "T4IhodNhlNcH"
       },
@@ -11146,7 +11139,7 @@
               "       [11.66969279]])"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11161,7 +11154,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -11494,7 +11487,7 @@
               "[10 rows x 85 columns]"
             ]
           },
-          "execution_count": 31,
+          "execution_count": 64,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11507,7 +11500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
@@ -11623,7 +11616,7 @@
               "2700        394.0        1.0     131000  "
             ]
           },
-          "execution_count": 32,
+          "execution_count": 65,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -11654,7 +11647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 66,
       "metadata": {
         "id": "t_4T1BUFZjS3"
       },
