day 12 work finished

--- a/notes/quiz12/Day_12_Linear_Regression.ipynb
+++ b/notes/quiz12/Day_12_Linear_Regression.ipynb
@@ -39958,18 +39958,7 @@
         "id": "ZH8ebe62STP1"
       },
       "source": [
-        "11\\. Compare the predictions from the previous part. Which one is best?"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 185,
-      "metadata": {
-        "id": "99MTNZuuSojs"
-      },
-      "outputs": [],
-      "source": [
-        "# YOUR CODE HERE"
+        "11\\. Compare the predictions from the previous part. Which one is best? - rhetorical question"
       ]
     }
   ],
