--- a/assignments/assignment4/DATA_301_Assignment_04_YOUR_NAMES_HERE.ipynb
+++ b/assignments/assignment4/DATA_301_Assignment_04_YOUR_NAMES_HERE.ipynb
@@ -1,28 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.6.8"
-    },
-    "colab": {
-      "provenance": []
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -46,42 +22,42 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "7i7B9nidOPFg"
       },
+      "outputs": [],
       "source": [
         "import requests\n",
         "import time\n",
         "\n",
-        "from bs4 import BeautifulSoup"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "from bs4 import BeautifulSoup\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "tbiq7kkEOPFl"
       },
+      "outputs": [],
       "source": [
         "lyrics = []\n",
         "\n",
         "# YOUR CODE HERE"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "qvRlrVnKOPFp"
       },
+      "outputs": [],
       "source": [
         "# Print out the lyrics to the first song.\n",
         "print(lyrics[0])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -94,15 +70,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nQI-4UeqOPFu"
       },
+      "outputs": [],
       "source": [
         "import pickle\n",
         "pickle.dump(lyrics, open(\"lyrics.pkl\", \"wb\"))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -161,9 +137,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "5P9Bsg6pOPFy"
       },
+      "outputs": [],
       "source": [
         "def train_markov_chain(lyrics):\n",
         "    \"\"\"\n",
@@ -182,15 +160,15 @@
         "        pass\n",
         "\n",
         "    return chain"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ewkgeMyQOPF2"
       },
+      "outputs": [],
       "source": [
         "# Load the pickled lyrics object that you created in Question 1.\n",
         "import pickle\n",
@@ -204,9 +182,7 @@
         "\n",
         "# What words tend to begin a line (i.e., what words follow the line break tag?)\n",
         "print(chain[\"<N>\"][:20])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -221,9 +197,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "CsFHxt0XOPF6"
       },
+      "outputs": [],
       "source": [
         "import random\n",
         "\n",
@@ -248,20 +226,18 @@
         "    # join the words together into a string with line breaks\n",
         "    lyrics = \" \".join(words[:-1])\n",
         "    return \"\\n\".join(lyrics.split(\"<N>\"))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "hmop55SGOPF-"
       },
+      "outputs": [],
       "source": [
         "print(generate_new_lyrics(chain))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -305,9 +281,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "sQQf5qfLOPGF"
       },
+      "outputs": [],
       "source": [
         "def train_markov_chain(lyrics):\n",
         "    \"\"\"\n",
@@ -326,15 +304,15 @@
         "        pass\n",
         "\n",
         "    return chain"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "OpPtRfOxOPGI"
       },
+      "outputs": [],
       "source": [
         "# Load the pickled lyrics object that you created in Question 1.\n",
         "import pickle\n",
@@ -345,9 +323,7 @@
         "\n",
         "# What words tend to start a song (i.e., what words follow the <START> tag?)\n",
         "print(chain[(None, \"<START>\")])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,9 +336,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "fmtEgsDoOPGM"
       },
+      "outputs": [],
       "source": [
         "import random\n",
         "\n",
@@ -387,29 +365,27 @@
         "    # join the words together into a string with line breaks\n",
         "    lyrics = \" \".join(words[:-1])\n",
         "    return \"\\n\".join(lyrics.split(\"<N>\"))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "WPPTdLloOPGO"
       },
+      "outputs": [],
       "source": [
         "print(generate_new_lyrics(chain))"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "**Paste your randomly generated song lyrics (either unigram or bigram) into the Discord channel and we can try to guess the artist!**"
-      ],
       "metadata": {
         "id": "poEifRUxQFb7"
-      }
+      },
+      "source": [
+        "**Paste your randomly generated song lyrics (either unigram or bigram) into the Discord channel and we can try to guess the artist!**"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -453,25 +429,49 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lHeFmDDKoQH4"
+      },
+      "outputs": [],
       "source": [
         "# !wget -nc https://raw.githubusercontent.com/brpy/colab-pdf/master/colab_pdf.py\n",
         "# from colab_pdf import colab_pdf\n",
         "# colab_pdf('DATA 301 Lab4B - YOUR NAMES HERE.ipynb')"
-      ],
-      "metadata": {
-        "id": "lHeFmDDKoQH4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "hfzKScBqoUQA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
